// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentOpenWith/OpenWithButton should render as disabled if the integration is disabled 1`] = `
<Tooltip
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="No integrations are available for this file"
      id="be.emptyOpenWithDescription"
    />
  }
>
  <Button
    isDisabled={true}
    onClick={[Function]}
  >
    <OpenWithButtonContents>
      <IconAdobeSign
        className="bcow-integration-icon"
        height={26}
        width={26}
      />
    </OpenWithButtonContents>
  </Button>
</Tooltip>
`;

exports[`components/ContentOpenWith/OpenWithButton should render as disabled if there is no display integration 1`] = `
<Tooltip
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="No integrations are available for this file"
      id="be.emptyOpenWithDescription"
    />
  }
>
  <Button
    isDisabled={true}
    onClick={[Function]}
  >
    <OpenWithButtonContents>
      <IconOpenWith
        className="bcow-integration-icon"
        height={26}
        width={26}
      />
    </OpenWithButtonContents>
  </Button>
</Tooltip>
`;

exports[`components/ContentOpenWith/OpenWithButton should render with the correct icon 1`] = `
<Tooltip
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="No integrations are available for this file"
      id="be.emptyOpenWithDescription"
    />
  }
>
  <Button
    isDisabled={false}
    onClick={[Function]}
  >
    <OpenWithButtonContents>
      <IconGoogleDocs
        className="bcow-integration-icon"
        height={26}
        width={26}
      />
    </OpenWithButtonContents>
  </Button>
</Tooltip>
`;
